--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "java_versions":{
         "8":"/usr/bin/java",
         "16":"/usr/bin/java16"
+        "17":"/usr/bin/java17"
     },
     "mc_versions":[
         {
@@ -86,8 +87,8 @@
         },
 	{
 	    "nms_version":"1_18_R1",
-            "minecraft_version":"1.18.1",
-            "java_version":"16"
+            "minecraft_version":"1.18",
+            "java_version":"17"
 	}
     ]
 }
