--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "java_versions":{
         "8":"/usr/bin/java",
-        "16":"/usr/bin/java16"
+        "16":"/usr/bin/java16",
         "17":"/usr/bin/java17"
     },
     "mc_versions":[
@@ -79,8 +79,8 @@
             "nms_version":"1_16_R3",
             "minecraft_version":"1.16.5",
             "java_version":"8"
-        },
-        {
+	},
+	{
             "nms_version":"1_17_R1",
             "minecraft_version":"1.17.1",
             "java_version":"16"
